--- a/frontend/index.html
+++ b/frontend/index.html
@@ -479,11 +479,17 @@ function speak(text, slow = false) {
     talking = true;
 
     lipsyncInterval = setInterval(() => {
-      t += slow ? 0.05 : 0.09;
+      t += slow ? 0.05 : 0.1;  // Tempo leicht erhöht
 
-      let jaw = Math.abs(Math.sin(t)) * 0.6;       // Grundöffnung
-      let emphasis = Math.abs(Math.sin(t * 0.5)) * 0.25;
-      jaw += emphasis;                             // kleine Betonungen
+      // --- Basisöffnung (sprechtypisch) ---
+      let jaw = Math.abs(Math.sin(t)) * 0.45;  // MAX 0.45 → natürlicher
+
+      // --- kleine Unregelmäßigkeit ---
+      jaw += (Math.random() * 0.15 - 0.07);  // -0.07 bis +0.07
+      jaw = Math.min(Math.max(jaw, 0), 0.45); // clamp 0–0.45
+
+      // --- gelegentliche Mikro-Pause (sehr subtil) ---
+      if (Math.random() < 0.05) jaw *= 0.3;  // alle ~20 Frames → kurz Pause
 
       const wide = jaw * 0.35;
       const puck = jaw * 0.22;
@@ -491,14 +497,14 @@ function speak(text, slow = false) {
       setBlendshape(jawOpenIndex, jaw);
       setBlendshape(mouthWideIndex, wide);
       setBlendshape(mouthPuckerIndex, puck);
-    }, 40);  // ca. 25 FPS
+
+    }, 35); // leicht schneller → wirkt weniger künstlich
   };
 
   u.onend = () => {
     talking = false;
     clearInterval(lipsyncInterval);
 
-    // sanft schließen
     const fadeOut = setInterval(() => {
       setBlendshape(jawOpenIndex, 0);
       setBlendshape(mouthWideIndex, 0);
