--- a/frontend/index.html
+++ b/frontend/index.html
@@ -462,6 +462,19 @@ function setBlendshape(index, value) {
     }
   });
 }
+function lerp(a, b, t) {  // linearer Übergang
+  return a + (b - a) * t;
+}
+
+function getBlendshape(index) {
+  let value = 0;
+  model.traverse(obj => {
+    if (obj.isMesh && obj.morphTargetInfluences) {
+      value = obj.morphTargetInfluences[index] ?? 0;
+    }
+  });
+  return value;
+}
 
 /* -----------------------------
    SPEAK – Natürlicher
@@ -501,17 +514,33 @@ function speak(text, slow = false) {
     }, 35); // leicht schneller → wirkt weniger künstlich
   };
 
-  u.onend = () => {
-    talking = false;
-    clearInterval(lipsyncInterval);
+u.onend = () => {
+  talking = false;
+  clearInterval(lipsyncInterval);
+  lipsyncInterval = null;
 
-    const fadeOut = setInterval(() => {
-      setBlendshape(jawOpenIndex, 0);
-      setBlendshape(mouthWideIndex, 0);
-      setBlendshape(mouthPuckerIndex, 0);
-      clearInterval(fadeOut);
-    }, 120);
+  // sanft und EINMALIG zurück in Idle-Mundhaltung
+  const start = {
+    jaw: getBlendshape(jawOpenIndex),
+    wide: getBlendshape(mouthWideIndex),
+    puck: getBlendshape(mouthPuckerIndex)
   };
+  let tEnd = 0;
+
+  const smoothClose = setInterval(() => {
+    tEnd += 0.12; // schneller -> kein Nachlauf
+
+    const factor = Math.min(1, tEnd);
+
+    setBlendshape(jawOpenIndex,  lerp(start.jaw,  0.1, factor)); // 0.1 = Atmung
+    setBlendshape(mouthWideIndex, lerp(start.wide, 0, factor));
+    setBlendshape(mouthPuckerIndex, lerp(start.puck, 0, factor));
+
+    if (factor >= 1) clearInterval(smoothClose);
+  }, 35); // 35ms = spürbar flüssig, aber nicht zittrig
+};
+
+
 
   speechSynthesis.speak(u);
 }
